--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".modules.login.LoginActivity">
+        <activity android:name=".modules.welcome.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".modules.signup.SignUpActivity">
+        </activity>
+        <activity android:name=".modules.login.LoginActivity">
+        </activity>
+        <activity android:name=".modules.main.MainActivity">
         </activity>
     </application>
 
