--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     compile 'com.android.support:support-v13:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
+
+    //CircleImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
