--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         </activity>
         <activity android:name=".modules.main.MainActivity">
         </activity>
+        <activity android:name=".modules.chat.ChatActivity">
+
+        </activity>
     </application>
 
 </manifest>
