--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         </activity>
         <activity android:name=".modules.main.MainActivity">
         </activity>
-        <activity android:name=".modules.chat.ChatActivity">
+        <activity
+            android:name=".modules.chat.ChatActivity"
+            android:theme="@style/translucentBackgroundTheme">
         </activity>
         <activity
             android:name=".modules.active_zoom.ActiveZoneActivity"
