--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.jinphy.simplechat"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -24,6 +24,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+repositories{
+    flatDir{
+        dirs 'libs' //就是你放aar的目录地址
     }
 }
 
@@ -48,5 +54,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile "org.java-websocket:Java-WebSocket:1.3.5"
+    compile 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
+    compile name:'SMSSDK-3.0.0',ext:'aar'
     testCompile 'junit:junit:4.12'
 }
