--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
     compile "org.java-websocket:Java-WebSocket:1.3.5"
     compile 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
     compile name:'SMSSDK-3.0.0',ext:'aar'
+    compile 'com.google.code.gson:gson:2.8.1'
+    // 权限请求
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     testCompile 'junit:junit:4.12'
 }
