finishing the verification code verifying function

--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
         google()
+        maven { url "http://objectbox.net/beta-repo/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath "io.objectbox:objectbox-gradle-plugin:1.2.0"
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,8 +23,11 @@ allprojects {
         //Bmob的maven仓库地址--必填
         //maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
         google()
+        maven { url "http://objectbox.net/beta-repo/" }
+
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
