--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'io.objectbox'
 
 android {
     compileSdkVersion 26
@@ -39,10 +40,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-//
-//    compile 'cn.bmob.android:bmob-sdk:3.5.6'
-//    compile 'cn.bmob.android:bmob-push:1.0.0'
-//    compile 'cn.bmob.android:bmob-im:2.0.9@aar'
 
 
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -60,5 +57,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     // 权限请求
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    compile 'io.objectbox:objectbox-rxjava:0.9.8'
     testCompile 'junit:junit:4.12'
 }
