--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:commons:0.9.5.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.7'
     compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'com.squareup.okio:okio:1.13.0'
+    compile 'com.apkfuns.logutils:library:1.5.1.1'
     testCompile 'junit:junit:4.12'
 }
