--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,3 @@
 /build
 /src/main/config
-/src/main/java/com/example/jinphy/simplechat/secret/Secret.java
+/src/main/java/com/example/jinphy/simplechat/secret/
