--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -21,17 +22,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
-repositories{
-    flatDir{
+repositories {
+    flatDir {
         dirs 'libs' //就是你放aar的目录地址
     }
 }
@@ -41,9 +42,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -54,9 +52,9 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile "org.java-websocket:Java-WebSocket:1.3.5"
+    compile 'org.java-websocket:Java-WebSocket:1.3.5'
     compile 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
-    compile name:'SMSSDK-3.0.0',ext:'aar'
+    compile name: 'SMSSDK-3.0.0', ext: 'aar'
     compile 'com.google.code.gson:gson:2.8.1'
     // 权限请求
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
@@ -67,5 +65,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.squareup.okio:okio:1.13.0'
     compile 'com.apkfuns.logutils:library:1.5.1.1'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.6.0'
+    compile 'com.android.support:multidex:1.0.2'
     testCompile 'junit:junit:4.12'
 }
