--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,6 @@
             android:name=".modules.active_zoom.ActiveZoneActivity"
             android:theme="@style/TranslucentTheme">
         </activity>
-
         <activity
             android:name=".modules.modify_user_info.ModifyUserActivity"
             android:theme="@style/ModifyUserActivityTheme">
@@ -64,9 +63,19 @@
             android:name=".modules.pick_photo.PickPhotoActivity"
             android:theme="@style/PickPhotoActivityTheme">
         </activity>
+        <activity
+            android:name=".modules.add_friend.AddFriendActivity"
+            android:theme="@style/AddFriendActivityTheme">
+        </activity>
 
-        <activity android:name=".modules.add_friend.AddFriendActivity"
-                  android:theme="@style/AddFriendActivityTheme">
+        <activity android:name=".modules.system_msg.SystemMsgActivity">
+        </activity>
+        <activity android:name=".modules.system_msg.new_friend.NewFriendsActivity">
+        </activity>
+        <activity android:name=".modules.system_msg.notice.NoticeActivity">
+        </activity>
+        <activity android:name=".modules.modify_friend_info.ModifyFriendInfoActivity"
+                  android:theme="@style/ModifyUserActivityTheme">
         </activity>
 
         <provider
@@ -83,13 +92,14 @@
         <service
             android:name=".services.push.PushService"
             android:enabled="true"
-            android:process=":push"
-            android:exported="true">
+            android:exported="true"
+            android:process=":push">
         </service>
 
-        <receiver android:name=".broadcasts.AppBroadcastReceiver"
-                  android:exported="true"
-                  android:enabled="true">
+        <receiver
+            android:name=".broadcasts.AppBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.example.jinphy.simplechat.AppReceiver"/>
             </intent-filter>
