--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,12 @@
             android:name=".modules.group.create_group.CreateGroupActivity"
             android:theme="@style/ModifyUserActivityTheme">
         </activity>
+        <activity android:name=".modules.group.group_list.GroupListActivity">
+        </activity>
+        <activity
+            android:name=".modules.group.group_detail.ModifyGroupActivity"
+            android:theme="@style/ModifyUserActivityTheme">
+        </activity>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -109,7 +115,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".modules.group.group_list.GroupListActivity">
+        <activity android:name=".modules.system_msg.new_member.NewMemberActivity">
         </activity>
     </application>
 
