群聊功能还未完成(升级ObjectBox前的提交)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         </activity>
         <activity
             android:name=".modules.chat.ChatActivity"
+            android:launchMode="singleTask"
             android:theme="@style/translucentBackgroundTheme">
         </activity>
         <activity
