--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.squareup.okio:okio:1.13.0'
     compile 'com.apkfuns.logutils:library:1.5.1.1'
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.12@aar'
+    compile 'com.github.bumptech.glide:glide:4.1.1'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+    compile 'com.daimajia.numberprogressbar:library:1.4@aar'
 
     // 这个'com.theartofdev.edmodo:android-image-cropper:2.6.0'内部有一个
     // com.android.support:{module}:27.+
