完成二维码功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
         </activity>
         <activity
             android:name=".modules.show_photo.ShowPhotoActivity"
-            android:theme="@style/PickPhotoActivityTheme">
+            android:theme="@style/TranslucentTheme">
         </activity>
 
         <provider
