--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.1.1'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     compile 'com.daimajia.numberprogressbar:library:1.4@aar'
+    compile 'com.github.yuzhiqiang1993:zxing:2.1.5'
 
     // 这个'com.theartofdev.edmodo:android-image-cropper:2.6.0'内部有一个
     // com.android.support:{module}:27.+
